# PYWEB-HW08-1st

./: config.ini  main.py  models.py  pyproject.toml  seeds.py
conf/: db.py
